# mlops-pipeline-v1

./: .env.default  .gitignore  .markdownlint.json  README.md  docker-compose.yaml  pypi.sh  pyproject.toml
.github/workflows/: ci.yaml  ci_publish_package.yaml  cicd_airflow.yaml
airflow/: Dockerfile  README.md  docker-compose.yaml
airflow/dags/: pipeline_dag.py
orchestrator/: Dockerfile  cronjobs  dag.py  requirements.txt
pipeline-feature/: Dockerfile  ci_publish_package.sh  cronjobs  dummy.py  pyproject.toml  requirements.txt
pipeline-feature/conf/: base.yaml
pipeline-feature/conf/extract/: base.yaml
pipeline-feature/mlops_pipeline_feature_v1/: load.py  pipeline.py
pipeline-training/: Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
pipeline-training/mlops_pipeline_training_v1/: pipeline.py
