[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-training"
version = "0.0.1"
authors = [
  { name="Gao Hongnan", email="hongnangao@gmail.com" },
]
description = "Training Pipeline of MLOps Pipeline Version 1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gaohn-common-utils",
    "hydra-core==1.3.2",
    "scikit-learn==1.2.2",
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.17.4", "pytest==6.2.5", "mypy==1.3.0", "isort==5.12.0"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

[project.urls]
"Homepage" = "https://github.com/gao-hongnan/mlops-pipeline-v1"
"Bug Tracker" = "https://github.com/gao-hongnan/mlops-pipeline-v1/issues"
